<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Caption">

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/camera"/>

    <EditText
        android:id="@+id/editTextCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/caption_hint"
        android:textSize="18sp" />
    <Switch
        android:id="@+id/switchHashTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:switchMinWidth="60dp"
        android:text="@string/switch_text"
        android:textSize="18sp"
        android:textOff="@string/off"
        android:textOn="@string/on"/>
<!--    <View style="@style/Divider"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonCancelCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:drawableLeft="@drawable/ic_cancel"/>

        <Button
            android:id="@+id/buttonPostCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/post"
            android:drawableLeft="@drawable/ic_post"/>

    </LinearLayout>

</LinearLayout>